--- a/steam/build.gradle
+++ b/steam/build.gradle
@@ -4,7 +4,7 @@ ext	{
 
 dependencies {
 
-	compile project(':steam-sdk'),
+	compile project(':steam-sdk')
 	
 	provided 'in.koyad.piston.core:piston-ui:2.1'
 
