--- a/steam-sdk/build.gradle
+++ b/steam-sdk/build.gradle
@@ -1,8 +1,6 @@
 dependencies {
 	
-	compile project(':steam-sdk')
-	
 	provided 'in.koyad.piston.core:piston-common:2.1',
-			 'org.eclipse.persistence:javax.persistence:2.1.0'
-
+			 'in.koyad.piston.core:piston-model:2.1'
+			 
 }
