--- a/steam/build.gradle
+++ b/steam/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 
 	compile project(':steam-sdk')
 	
-	provided 'in.koyad.piston.core:piston-ui:2.1'
+	provided 'in.koyad.piston.core:piston-ui:2.x'
 
 }
 
