--- a/steam-service/src/main/resources/log4j.properties
+++ b/steam-service/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Global logging configuration
 log4j.rootLogger=ERROR, console, FILE
 
-log4j.logger.in.koyad.piston.app.steam.service.listener.ContextListener=INFO
+log4j.logger.in.koyad.piston.app.steam.service.listener.SteamServiceContextListener=DEBUG
 
 # Console output...
 log4j.appender.console=org.apache.log4j.ConsoleAppender
