Updated log4j configuration for service resources.

--- a/steam-service/src/main/resources/log4j.properties
+++ b/steam-service/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger=ERROR, console, FILE
 
 log4j.logger.in.koyad.piston.app.steam.service.listener.SteamServiceContextListener=DEBUG
+log4j.logger.in.koyad.piston.app.steam.service.resources=DEBUG
 
 # Console output...
 log4j.appender.console=org.apache.log4j.ConsoleAppender
