--- a/steam-service/src/main/resources/log4j.properties
+++ b/steam-service/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Global logging configuration
 log4j.rootLogger=ERROR, console, FILE
 
-log4j.logger.in.koyad.piston.app.steam.service.listener.SteamServiceContextListener=DEBUG
+log4j.logger.in.koyad.piston.app.steam.service.listener=DEBUG
 log4j.logger.in.koyad.piston.app.steam.service.resources=DEBUG
 
 # Console output...
