--- a/steam-service/build.gradle
+++ b/steam-service/build.gradle
@@ -6,9 +6,9 @@ dependencies {
     		"in.koyad.piston.core:piston-sdk:$pistonVersion",
     		"org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
 
-    runtime 'org.hibernate:hibernate-entitymanager:4.3.8.Final'
+    runtime "org.hibernate:hibernate-entitymanager:$hibernateVersion"
 
     provided "javax.servlet:javax.servlet-api:$servletVersion"
     		 
-    testRuntime 'org.mariadb.jdbc:mariadb-java-client:1.2.0'
+    testRuntime "org.mariadb.jdbc:mariadb-java-client:$mariadbDriverVersion"
 }
