--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ subprojects {
     ext {
         servletVersion = '3.1.0'
         jerseyVersion = '2.21'
-        pistonVersion = '2.3'
+        pistonShareVersion = '1.x.y'
+        pistonCoreVersion = '3.x.y'
         hibernateVersion = '5.2.2.Final'
         mariadbDriverVersion = '1.5.2'
     }
