--- a/steam-service/src/main/webapp/WEB-INF/web.xml
+++ b/steam-service/src/main/webapp/WEB-INF/web.xml
@@ -7,14 +7,14 @@
 		<servlet-name>REST container</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>in.koyad.piston.app.steam.service.resources</param-value>
+			<param-name>javax.ws.rs.Application</param-name>
+			<param-value>in.koyad.piston.app.steam.service.utils.JerseyConfig</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>REST container</servlet-name>
-		<url-pattern>/v1.0/*</url-pattern>
+		<url-pattern>/v3.0/*</url-pattern>
 	</servlet-mapping>
 </web-app>
