--- a/steam/build.gradle
+++ b/steam/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'war'
 
+version = computeVersion()
+
 dependencies {
 
 	compile project(':steam-client')
@@ -7,3 +9,12 @@ dependencies {
 	provided "in.mechcloud.piston.core:piston-ui:$pistonCoreVersion"
 
 }
+
+def computeVersion() {
+	File version = file('version') 
+	if(version.exists()) {
+		return version.text
+	}
+    return "invalidVersion"
+}
+
